kubernetes/apps/staging/austin/admin/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: admin
  namespace: envoy-system
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: admin-envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: admin.luke.aus.int.yucca.futo.network
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: admin-luke-tls
